--- a/to.etc.domui/src/resources/themes/domui/255_datapager.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/255_datapager.frag.css
@@ -5,6 +5,9 @@
 	margin-left: 4px;
 	padding: 0px;
 }
+.ui-dp-btns {
+	margin-left: -9px;	
+}
 
 .ui-dp-btns a{
 	height: <%= data_pager_icon_size_y %>px;
